--- a/testnotebook.ipynb
+++ b/testnotebook.ipynb
@@ -7539,10 +7539,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'aatrox': 266,\n",
+       " 'ahri': 103,\n",
+       " 'akali': 84,\n",
+       " 'alistar': 12,\n",
+       " 'amumu': 32,\n",
+       " 'anivia': 34,\n",
+       " 'annie': 1,\n",
+       " 'aphelios': 523,\n",
+       " 'ashe': 22,\n",
+       " 'aurelionsol': 136,\n",
+       " 'azir': 268,\n",
+       " 'bard': 432,\n",
+       " 'blitzcrank': 53,\n",
+       " 'brand': 63,\n",
+       " 'braum': 201,\n",
+       " 'caitlyn': 51,\n",
+       " 'camille': 164,\n",
+       " 'cassiopeia': 69,\n",
+       " 'chogath': 31,\n",
+       " 'corki': 42,\n",
+       " 'darius': 122,\n",
+       " 'diana': 131,\n",
+       " 'draven': 119,\n",
+       " 'drmundo': 36,\n",
+       " 'ekko': 245,\n",
+       " 'elise': 60,\n",
+       " 'evelynn': 28,\n",
+       " 'ezreal': 81,\n",
+       " 'fiddlesticks': 9,\n",
+       " 'fiora': 114,\n",
+       " 'fizz': 105,\n",
+       " 'galio': 3,\n",
+       " 'gangplank': 41,\n",
+       " 'garen': 86,\n",
+       " 'gnar': 150,\n",
+       " 'gragas': 79,\n",
+       " 'graves': 104,\n",
+       " 'gwen': 887,\n",
+       " 'hecarim': 120,\n",
+       " 'heimerdinger': 74,\n",
+       " 'illaoi': 420,\n",
+       " 'irelia': 39,\n",
+       " 'ivern': 427,\n",
+       " 'janna': 40,\n",
+       " 'jarvaniv': 59,\n",
+       " 'jax': 24,\n",
+       " 'jayce': 126,\n",
+       " 'jhin': 202,\n",
+       " 'jinx': 222,\n",
+       " 'kaisa': 145,\n",
+       " 'kalista': 429,\n",
+       " 'karma': 43,\n",
+       " 'karthus': 30,\n",
+       " 'kassadin': 38,\n",
+       " 'katarina': 55,\n",
+       " 'kayle': 10,\n",
+       " 'kayn': 141,\n",
+       " 'kennen': 85,\n",
+       " 'khazix': 121,\n",
+       " 'kindred': 203,\n",
+       " 'kled': 240,\n",
+       " 'kogmaw': 96,\n",
+       " 'leblanc': 7,\n",
+       " 'leesin': 64,\n",
+       " 'leona': 89,\n",
+       " 'lillia': 876,\n",
+       " 'lissandra': 127,\n",
+       " 'lucian': 236,\n",
+       " 'lulu': 117,\n",
+       " 'lux': 99,\n",
+       " 'malphite': 54,\n",
+       " 'malzahar': 90,\n",
+       " 'maokai': 57,\n",
+       " 'masteryi': 11,\n",
+       " 'missfortune': 21,\n",
+       " 'monkeyking': 62,\n",
+       " 'mordekaiser': 82,\n",
+       " 'morgana': 25,\n",
+       " 'nami': 267,\n",
+       " 'nasus': 75,\n",
+       " 'nautilus': 111,\n",
+       " 'neeko': 518,\n",
+       " 'nidalee': 76,\n",
+       " 'nocturne': 56,\n",
+       " 'nunu': 20,\n",
+       " 'olaf': 2,\n",
+       " 'orianna': 61,\n",
+       " 'ornn': 516,\n",
+       " 'pantheon': 80,\n",
+       " 'poppy': 78,\n",
+       " 'pyke': 555,\n",
+       " 'qiyana': 246,\n",
+       " 'quinn': 133,\n",
+       " 'rakan': 497,\n",
+       " 'rammus': 33,\n",
+       " 'reksai': 421,\n",
+       " 'rell': 526,\n",
+       " 'renekton': 58,\n",
+       " 'rengar': 107,\n",
+       " 'riven': 92,\n",
+       " 'rumble': 68,\n",
+       " 'ryze': 13,\n",
+       " 'samira': 360,\n",
+       " 'sejuani': 113,\n",
+       " 'senna': 235,\n",
+       " 'seraphine': 147,\n",
+       " 'sett': 875,\n",
+       " 'shaco': 35,\n",
+       " 'shen': 98,\n",
+       " 'shyvana': 102,\n",
+       " 'singed': 27,\n",
+       " 'sion': 14,\n",
+       " 'sivir': 15,\n",
+       " 'skarner': 72,\n",
+       " 'sona': 37,\n",
+       " 'soraka': 16,\n",
+       " 'swain': 50,\n",
+       " 'sylas': 517,\n",
+       " 'syndra': 134,\n",
+       " 'tahmkench': 223,\n",
+       " 'taliyah': 163,\n",
+       " 'talon': 91,\n",
+       " 'taric': 44,\n",
+       " 'teemo': 17,\n",
+       " 'thresh': 412,\n",
+       " 'tristana': 18,\n",
+       " 'trundle': 48,\n",
+       " 'tryndamere': 23,\n",
+       " 'twistedfate': 4,\n",
+       " 'twitch': 29,\n",
+       " 'udyr': 77,\n",
+       " 'urgot': 6,\n",
+       " 'varus': 110,\n",
+       " 'vayne': 67,\n",
+       " 'veigar': 45,\n",
+       " 'velkoz': 161,\n",
+       " 'vi': 254,\n",
+       " 'viego': 234,\n",
+       " 'viktor': 112,\n",
+       " 'vladimir': 8,\n",
+       " 'volibear': 106,\n",
+       " 'warwick': 19,\n",
+       " 'xayah': 498,\n",
+       " 'xerath': 101,\n",
+       " 'xinzhao': 5,\n",
+       " 'yasuo': 157,\n",
+       " 'yone': 777,\n",
+       " 'yorick': 83,\n",
+       " 'yuumi': 350,\n",
+       " 'zac': 154,\n",
+       " 'zed': 238,\n",
+       " 'ziggs': 115,\n",
+       " 'zilean': 26,\n",
+       " 'zoe': 142,\n",
+       " 'zyra': 143,\n",
+       " 'aurelion sol': 136,\n",
+       " 'jarvan iv': 59,\n",
+       " 'lee sin': 64,\n",
+       " 'wukong': 62,\n",
+       " 'master yi': 11,\n",
+       " 'miss fortune': 21,\n",
+       " 'tahm kench': 223,\n",
+       " 'twisted fate': 4,\n",
+       " 'xin zhao': 5}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION_NAME_TO_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from data_dragon import CHAMPION_LIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aatrox',\n",
+       " 'ahri',\n",
+       " 'akali',\n",
+       " 'alistar',\n",
+       " 'amumu',\n",
+       " 'anivia',\n",
+       " 'annie',\n",
+       " 'aphelios',\n",
+       " 'ashe',\n",
+       " 'aurelionsol',\n",
+       " 'azir',\n",
+       " 'bard',\n",
+       " 'blitzcrank',\n",
+       " 'brand',\n",
+       " 'braum',\n",
+       " 'caitlyn',\n",
+       " 'camille',\n",
+       " 'cassiopeia',\n",
+       " 'chogath',\n",
+       " 'corki',\n",
+       " 'darius',\n",
+       " 'diana',\n",
+       " 'draven',\n",
+       " 'drmundo',\n",
+       " 'ekko',\n",
+       " 'elise',\n",
+       " 'evelynn',\n",
+       " 'ezreal',\n",
+       " 'fiddlesticks',\n",
+       " 'fiora',\n",
+       " 'fizz',\n",
+       " 'galio',\n",
+       " 'gangplank',\n",
+       " 'garen',\n",
+       " 'gnar',\n",
+       " 'gragas',\n",
+       " 'graves',\n",
+       " 'gwen',\n",
+       " 'hecarim',\n",
+       " 'heimerdinger',\n",
+       " 'illaoi',\n",
+       " 'irelia',\n",
+       " 'ivern',\n",
+       " 'janna',\n",
+       " 'jarvaniv',\n",
+       " 'jax',\n",
+       " 'jayce',\n",
+       " 'jhin',\n",
+       " 'jinx',\n",
+       " 'kaisa',\n",
+       " 'kalista',\n",
+       " 'karma',\n",
+       " 'karthus',\n",
+       " 'kassadin',\n",
+       " 'katarina',\n",
+       " 'kayle',\n",
+       " 'kayn',\n",
+       " 'kennen',\n",
+       " 'khazix',\n",
+       " 'kindred',\n",
+       " 'kled',\n",
+       " 'kogmaw',\n",
+       " 'leblanc',\n",
+       " 'leesin',\n",
+       " 'leona',\n",
+       " 'lillia',\n",
+       " 'lissandra',\n",
+       " 'lucian',\n",
+       " 'lulu',\n",
+       " 'lux',\n",
+       " 'malphite',\n",
+       " 'malzahar',\n",
+       " 'maokai',\n",
+       " 'masteryi',\n",
+       " 'missfortune',\n",
+       " 'monkeyking',\n",
+       " 'mordekaiser',\n",
+       " 'morgana',\n",
+       " 'nami',\n",
+       " 'nasus',\n",
+       " 'nautilus',\n",
+       " 'neeko',\n",
+       " 'nidalee',\n",
+       " 'nocturne',\n",
+       " 'nunu',\n",
+       " 'olaf',\n",
+       " 'orianna',\n",
+       " 'ornn',\n",
+       " 'pantheon',\n",
+       " 'poppy',\n",
+       " 'pyke',\n",
+       " 'qiyana',\n",
+       " 'quinn',\n",
+       " 'rakan',\n",
+       " 'rammus',\n",
+       " 'reksai',\n",
+       " 'rell',\n",
+       " 'renekton',\n",
+       " 'rengar',\n",
+       " 'riven',\n",
+       " 'rumble',\n",
+       " 'ryze',\n",
+       " 'samira',\n",
+       " 'sejuani',\n",
+       " 'senna',\n",
+       " 'seraphine',\n",
+       " 'sett',\n",
+       " 'shaco',\n",
+       " 'shen',\n",
+       " 'shyvana',\n",
+       " 'singed',\n",
+       " 'sion',\n",
+       " 'sivir',\n",
+       " 'skarner',\n",
+       " 'sona',\n",
+       " 'soraka',\n",
+       " 'swain',\n",
+       " 'sylas',\n",
+       " 'syndra',\n",
+       " 'tahmkench',\n",
+       " 'taliyah',\n",
+       " 'talon',\n",
+       " 'taric',\n",
+       " 'teemo',\n",
+       " 'thresh',\n",
+       " 'tristana',\n",
+       " 'trundle',\n",
+       " 'tryndamere',\n",
+       " 'twistedfate',\n",
+       " 'twitch',\n",
+       " 'udyr',\n",
+       " 'urgot',\n",
+       " 'varus',\n",
+       " 'vayne',\n",
+       " 'veigar',\n",
+       " 'velkoz',\n",
+       " 'vi',\n",
+       " 'viego',\n",
+       " 'viktor',\n",
+       " 'vladimir',\n",
+       " 'volibear',\n",
+       " 'warwick',\n",
+       " 'xayah',\n",
+       " 'xerath',\n",
+       " 'xinzhao',\n",
+       " 'yasuo',\n",
+       " 'yone',\n",
+       " 'yorick',\n",
+       " 'yuumi',\n",
+       " 'zac',\n",
+       " 'zed',\n",
+       " 'ziggs',\n",
+       " 'zilean',\n",
+       " 'zoe',\n",
+       " 'zyra',\n",
+       " 'aurelion sol',\n",
+       " 'jarvan iv',\n",
+       " 'lee sin',\n",
+       " 'wukong',\n",
+       " 'master yi',\n",
+       " 'miss fortune',\n",
+       " 'tahm kench',\n",
+       " 'twisted fate',\n",
+       " 'xin zhao']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION_LIST"
+   ]
   }
  ],
  "metadata": {
